# RepoClarity-AI

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt
backend/app/: main.py
backend/app/api/: routes_models.py  routes_query.py  routes_repos.py
backend/app/cli/: main.py
backend/app/core/: config.py  services.py
backend/app/llm/: lm_studio_client.py  ollama_client.py
backend/app/rag/: chunker.py  embedder.py  indexing_service.py  query_engine.py  repo_summary.py  retriever.py  vector_store.py
backend/app/repo/: entrypoint_detector.py  file_prioritizer.py  framework_detector.py  language_detector.py  repo_registry.py  scanner.py
backend/scripts/: evaluate_retrieval.py  test_pipeline.py
backend/tests/api/: test_route_models.py  test_route_query.py  test_route_repos.py
backend/tests/core/: test_services.py
backend/tests/llm/: test_ollama_client.py
backend/tests/rag/: test_chunker.py  test_embedder.py  test_indexing_service.py  test_query_engine.py  test_repo_summary.py  test_retriever.py  test_vector_store.py
backend/tests/repo/: test_entrypoint_detector.py  test_file_prioritizer.py  test_framework_detector.py  test_repo_registry.py  test_scanner.py
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.test.json  vitest.config.ts
frontend/app/: app.vue
frontend/app/components/: AddRepoModal.vue  ChatBox.vue  ChatMessage.vue  CodeBlock.vue  ModelSelector.vue  RepoItem.vue  RepoSelector.vue  RepoSettingsModal.vue
frontend/app/composables/: api.ts  (+1 more)
(+13 files in other folders)
